--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -63,7 +63,7 @@
       <div class="relative animate-fade-up" style="animation-delay: 0.4s">
         <div class="gradient-border rounded-2xl overflow-hidden">
           <div class="bg-[#16161F] p-2">
-            <%= image_tag "Dash.jpg", 
+            <%= image_tag "Dash.jpeg", 
               alt: "Dashboard Viral Spy - Painel de análise de perfis e métricas de performance",
               class: "rounded-xl w-full h-auto" %>
           </div>
