Fix: usar render_markdown para formatar análise completa

--- a/app/views/admin/profile_contexts/show.html.erb
+++ b/app/views/admin/profile_contexts/show.html.erb
@@ -189,7 +189,7 @@
               <div class="px-8 pb-8">
                 <div class="bg-white/[0.05] rounded-xl p-8 border border-white/[0.08]">
                   <div class="prose prose-invert prose-headings:text-white prose-p:text-gray-300 prose-strong:text-white prose-ul:text-gray-300 prose-ol:text-gray-300 max-w-none">
-                    <%= simple_format(@context.full_analysis) %>
+                    <%= render_markdown(@context.full_analysis) %>
                   </div>
                 </div>
               </div>
